raju commirt with connections

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         </activity>
         <activity android:name=".me" />
         <activity android:name=".Media"></activity>
+        <activity android:name=".Main4Activity" />
+        <activity android:name=".Main5Activity"></activity>
+        <activity android:name=".Main6Activity" />
+
+
     </application>
 
 </manifest>
